# pytest-learning

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: checker.py  file_checker.py  main.py  other_funcs.py  shop.py  user_processor.py  utils.py
tests/: conftest.py  test_calculator.py  test_checker.py  test_file_checker.py  test_files.py  test_files_operations.py  test_other_funcs.py  test_output.py  test_profile.py  test_settings.py  test_shop.py  test_user_processor.py  test_utils.py
