[project]
name = "pytest-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
]
[tool.pytest.ini_options]
addopts = "-v --strict-markers --cov=app --cov-report=term-missing -n auto --dist=loadfile"
testpaths = ["tests"]
markers = [
    "smoke: Дымовые тесты для критического функционала",
    "regression: Полный набор регрессионных тестов",
    "slow: Медленные тесты (например, с доступом к сети)"
]
